@@ -8,8 +8,8 @@ test "$prefix" = NONE && prefix=/usr/local
 test "$exec_prefix" = NONE && exec_prefix=$prefix
 
 PACKAGE=mbuffer
+VERSION=20010703
 
-VERSION=20010702
 AC_DEFINE_UNQUOTED(VERSION,"${VERSION}")
 AC_SUBST(VERSION)
 
@@ -74,7 +74,7 @@ AC_ARG_ENABLE(experimental,
         AC_DEFINE_UNQUOTED(EXPERIMENTAL)
 	AC_SEARCH_LIBS(socket,socket,,
 		AC_MSG_ERROR(could not find the library containing network functions!))
-	AC_SEARCH_LIBS(inet_pton,nsl,,
+	AC_SEARCH_LIBS(gethostbyname,nsl,,
 		AC_MSG_ERROR(could not find the library containing name convertion functions!))
 	,)
 AC_SUBST(EXPERIMENTAL)
